# cmake-learn

./: CMakeLists.txt  README.md
src/: main.cpp
